Add Macy's to registries page

--- a/index.html
+++ b/index.html
@@ -313,7 +313,8 @@ hr {
 			<div id="registries" style="display: none;" class="section">
 				<h1>Registries</h1>
 
-				<p>We are currently in the process of completeing our registries. Please check back soon. </p>
+				<p>We are currently in the process of finalizing our registries. We are currently registered at <a href="http://www1.macys.com/registry/wedding/guest/?registryId=164868" target="_blank">Macy's</a>.</p>
+
 			</div>
 		</div>
 
