--- a/index.html
+++ b/index.html
@@ -313,8 +313,12 @@ hr {
 			<div id="registries" style="display: none;" class="section">
 				<h1>Registries</h1>
 
-				<p>We are currently in the process of finalizing our registries. We are currently registered at <a href="http://www1.macys.com/registry/wedding/guest/?registryId=164868" target="_blank">Macy's</a>.</p>
-
+				<p>We are currently registered at the following stores:</p>
+				
+				<ul>
+					<li><a href="http://www1.macys.com/registry/wedding/guest/?registryId=164868" target="_blank">Macy's</a></li>
+					<li><a href="http://www.williams-sonoma.com/registry/3169058/registry-list.html" target="_blank">Williams Sonoma</a></li>
+				</ul>
 			</div>
 		</div>
 
