--- a/index.html
+++ b/index.html
@@ -320,6 +320,10 @@ hr {
 					<li><a href="http://www1.macys.com/registry/wedding/guest/?registryId=164868" target="_blank">Macy's</a></li>
 					<li><a href="http://www.williams-sonoma.com/registry/3169058/registry-list.html" target="_blank">Williams Sonoma</a></li>
 				</ul>
+
+				<p>Or if you would like to make a donation to our honeymood fund, we have set up an account on ><a href="http://www.honeyfund.com/wedding/marisaandphil" target="_blank">HoneyFund.com</a>.<p>
+
+
 			</div>
 		</div>
 
