--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ hr {
 					<li><a href="http://www.williams-sonoma.com/registry/3169058/registry-list.html" target="_blank">Williams Sonoma</a></li>
 				</ul>
 
-				<p>Or if you would like to make a donation to our honeymood fund, we have set up an account on ><a href="http://www.honeyfund.com/wedding/marisaandphil" target="_blank">HoneyFund.com</a>.<p>
+				<p>Or if you would like to make a donation to our honeymood fund, we have set up an account on <a href="http://www.honeyfund.com/wedding/marisaandphil" target="_blank">HoneyFund.com</a>.<p>
 
 
 			</div>
