--- a/index.html
+++ b/index.html
@@ -321,6 +321,26 @@ hr {
 				<h2>Welcome Event</h2>
 
 				<blockquote>
+				<h3>Wednesday, July 17, 2013</h3>
+
+				<p>10:00AM -</p>
+
+				<p>London Sightseeing.</p>
+				
+				<p>We will be walking around London and visiting some of our favourite sights including Big Ben, Trafalgar Square, Picadilly Circus, Buckingham Palace and Covent Garden.
+				</p>
+				</blockquote>
+				<blockquote>
+				<h3>Thursday, July 18, 2013</h3>
+
+				<p>7:00PM -</p>
+
+				<p>Cambridge Pub Crawl</p>
+				
+				<p>We will be visiting some of our favourite pubs in Cambridge. For those of you would like to get started early, we have posted a list of our favourite pubs on Google Maps <a href="http://maps.google.com/maps/ms?ie=UTF&msa=0&msid=216864241354524736059.0004c3641f9997e72e9b6" tagrt="_blank">here</a>.</p>
+				</blockquote>
+
+				<blockquote>
 				<h3>Friday, July 19, 2013</h3>
 
 				<p>Noon - 2:00PM</p>
