--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ hr {
 				<p>We will be visiting some of our favourite pubs in Cambridge. For those of you would like to get started early, we have posted a list of our favourite pubs on Google Maps <a href="http://maps.google.com/maps/ms?ie=UTF&msa=0&msid=216864241354524736059.0004c3641f9997e72e9b6" tagrt="_blank">here</a>.</p>
 				</blockquote>
 
-				<h2>Welcome Event</h2>
+				<h2>Punting</h2>
 
 				<blockquote>
 				<h3>Friday, July 19, 2013</h3>
@@ -351,7 +351,7 @@ hr {
 				<p>Meet by the river off of Mill Ln.</p> 
 				</blockquote>
 	
-				<h2>Ceremony and Reception</h2>
+				<h2>Wedding Ceremony and Reception</h2>
 	
 				<blockquote>
 				<h3>Saturday, July 20, 2013</h3>
