--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@ hr {
 			<li><a href="#" data-section="location">Location</a></li>
 			<li><a href="#" data-section="photos">Photos</a></li>
 			<li><a href="#" data-section="registries">Our Registries</a></li>
+			<li><a href="#" data-section="rsvp">RSVP</a></li>
 		</ul>
 
 		<hr />
@@ -481,6 +482,56 @@ hr {
 					<li><a href="http://www.williams-sonoma.com/registry/3169058/registry-list.html" target="_blank">Williams Sonoma</a></li>
 					<li><a href="http://www.honeyfund.com/wedding/marisaandphil" target="_blank">HoneyFund.com</a></li>
 				</ul>
+			</div>
+
+			<div id="rsvp" style="display: none;" class="section">
+				<h1>RSVP</h1>
+
+				<p>A response is requested by 29<sup>th</sup> June.</p>
+                
+                <form id="emf-form" target="_self" enctype="multipart/form-data" method="post" action="http://www.emailmeform.com/builder/form/Xh7s1O59wN0b">
+                  <h4>Name</h4>
+                  <p><input id="element_2" name="element_2" value="" size="20" class="validate[required]" type="text" />
+                  <input id="element_3" name="element_3" value="" size="20" class="validate[required]" type="text" /></p>
+                  <h4>Will you be attending the ceremony?</h4>
+                  <p><input id="element_5_0" name="element_5" value="Wouldn't miss it for the world!" class="validate[required]" type="radio" /><font size="2" color="#000000">Wouldn't miss it for the world!</font>
+                  <br/><input id="element_5_1" name="element_5" value="Will be celebrating from afar" class="validate[required]" type="radio" /><font size="2" color="#000000">Will be celebrating from afar</font></p>
+                  <h4>Number of guests attending</h4>
+                  <input id="element_6" name="element_6" class="validate[optional,custom[onlyNumber]]" value="" size="5" type="text" />
+                  <h4>Dietary Requirements</h4>
+                  <p><input id="element_7_0" name="element_7" value="None" class="validate[required]" checked="checked" type="radio" /><font size="2" color="#000000">&nbsp;None&nbsp;</font>
+                  <br/><input id="element_7_1" name="element_7" value="No Dairy" class="validate[required]" type="radio" /><font size="2" color="#000000">&nbsp;No Dairy&nbsp;</font>
+                  <br/><input id="element_7_2" name="element_7" value="Vegetarian" class="validate[required]" type="radio" /><font size="2" color="#000000">&nbsp;Vegetarian&nbsp;</font>
+                  <br/><input id="element_7_3" name="element_7" value="Other" class="validate[required]" type="radio" /><font size="2" color="#000000">&nbsp;Other&nbsp;</font>
+                  <br/><input type="text" class="validate[required]" onclick="document.getElementById('element_7_3').checked = 'checked';" 
+					onchange="document.getElementById('element_7_3').value = this.value;" 
+					id="element_7_other" name="element_7_other" value=""/></p>
+                  <h4>Which events would you like to attend?</h4>
+                  <p><input id="element_9_0" name="element_9[]" value="London Sightseeing (Thursday 18th, 7pm)" class="validate[optional]"  type="checkbox" /><label class="padleft-w5" for="element_9_0">London Sightseeing (Thursday 18th, 7pm)</label>
+                  <br/><input id="element_9_1" name="element_9[]" value="Cambridge Pub Crawl (Wednesday 17th, 10am)" class="validate[optional]"  type="checkbox" /><label class="padleft-w5" for="element_9_1">Cambridge Pub Crawl (Wednesday 17th, 10am)</label>
+                  <br/><input id="element_9_2" name="element_9[]" value="Punting (Friday 19th, Noon)" class="validate[optional]"  type="checkbox" /><label class="padleft-w5" for="element_9_2">Punting (Friday 19th, Noon)</label></p>
+                  <h4>Other Comments</h4>
+                  <textarea id="element_10" name="element_10" cols="45" rows="5" class="validate[optional]"></textarea>
+                  <input name="element_counts" value="11" type="hidden" />
+                  <input name="embed" value="forms" type="hidden" />
+                  <p><input value="RSVP" type="submit" /></p>
+               </form>
+               <div style="margin-top:18px;text-align:center">
+                 <script type="text/javascript">
+                 //<![CDATA[
+                 generate_css_for_emf_ad();
+                 //]]>
+                 </script>
+                 <div id='emf_advertisement'>
+                   <font size="2" color="#000000">Powered by</font><span style="position: relative; padding-left: 3px; bottom: -5px;"><img src=
+                   "http://www.emailmeform.com/builder/images/footer-logo.png" /></span><font size="2" color="#000000">EMF</font> <a style="text-decoration:none;" href="http://www.emailmeform.com/"
+                   target="_blank"><font size="2" color="#000000">Survey Creator</font></a>
+                 </div>
+                 <div>
+                   <a style="line-height:20px;font-size:70%;text-decoration:none;" href="http://www.emailmeform.com/report-abuse.html?http://www.emailmeform.com/builder/form/Xh7s1O59wN0b" target=
+                   "_blank"><font size="2" color="#000000">Report Abuse</font></a>
+                 </div>
+               </div>
 			</div>
 		</div>
 
