--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ hr {
           <h4>Will you be attending the ceremony?</h4>
           <p><input id="element_5_0" name="element_5" value="Wouldn't miss it for the world!" class="validate[required]" type="radio" /><font>Wouldn't miss it for the world!</font>
           <br/><input id="element_5_1" name="element_5" value="Will be celebrating from afar" class="validate[required]" type="radio" /><font>Will be celebrating from afar</font></p>
-          <h4>Number of guests attending</h4>
+          <h4>Number of guests attending (including yourself)</h4>
           <input id="element_6" name="element_6" class="validate[optional,custom[onlyNumber]]" value="" size="5" type="text" />
           <h4>Dietary Requirements</h4>
           <p><input id="element_7_0" name="element_7" value="None" class="validate[required]" checked="checked" type="radio" /><font>&nbsp;None&nbsp;</font>
