--- a/index.html
+++ b/index.html
@@ -333,8 +333,8 @@ hr {
 			onchange="document.getElementById('element_7_3').value = this.value;" 
 			id="element_7_other" name="element_7_other" value=""/></p>
           <h4>Which events would you like to attend?</h4>
-		  <p><input id="element_9_1" name="element_9[]" value="Cambridge Pub Crawl (Wednesday 17th, 10am)" class="validate[optional]"  type="checkbox" /><label class="padleft-w5" for="element_9_1">Cambridge Pub Crawl (Wednesday 17th, 10am)</label>
-          <br/><input id="element_9_0" name="element_9[]" value="London Sightseeing (Thursday 18th, 7pm)" class="validate[optional]"  type="checkbox" /><label class="padleft-w5" for="element_9_0">London Sightseeing (Thursday 18th, 7pm)</label>
+          <p><input id="element_9_0" name="element_9[]" value="London Sightseeing (Wednesday 17th, 10am)" class="validate[optional]"  type="checkbox" /><label class="padleft-w5" for="element_9_0">London Sightseeing (Wednesday 17th, 10am)</label>
+          <br/><input id="element_9_1" name="element_9[]" value="Cambridge Pub Crawl (Thursday 18th, 7pm)" class="validate[optional]"  type="checkbox" /><label class="padleft-w5" for="element_9_1">Cambridge Pub Crawl (Thursday 18th, 7pm)</label>
           <br/><input id="element_9_2" name="element_9[]" value="Punting (Friday 19th, Noon)" class="validate[optional]"  type="checkbox" /><label class="padleft-w5" for="element_9_2">Punting (Friday 19th, Noon)</label></p>
           <h4>Other Comments</h4>
           <textarea id="element_10" name="element_10" cols="60" rows="7" class="validate[optional]"></textarea>
