--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ h1, h2, h3 {
 	position: relative;
 	width: 1024px;    
 	margin: 0 auto;
+	padding: 0 20px;
 }
 
 #header {            
@@ -46,7 +47,6 @@ h1, h2, h3 {
 }
 
 	#header h1 {
-		font-size: 3em;
 		font-variant: small-caps;
 	}
 
