--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 
 <head>
 
+<meta name="description" content="The Wedding of Marisa Alcaraz and Phillip Freeman" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
 <title>The Wedding of Marisa Alcaraz and Phillip Freeman</title>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
