--- a/index.html
+++ b/index.html
@@ -45,6 +45,20 @@ h1, h2, h3 {
 	padding: 0 20px;
 }
 
+@media (max-width: 767px)
+{
+    #wrapper
+    {
+        width: 100%;  
+	    padding: 0;
+    }
+	
+    #wrapper > div
+    {
+	    margin: 20px;
+    }
+}
+
 #header {            
 	text-align: center;
 }
