--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ h1, h2, h3 {
 	padding: 0 20px;
 }
 
-@media (max-width: 767px)
+@media (max-width: 1064px)
 {
     #wrapper
     {
@@ -55,7 +55,7 @@ h1, h2, h3 {
 	
     #wrapper > div
     {
-	    margin: 20px;
+	    margin: 0 20px;
     }
 }
 
